--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
             </section> 
             <div class="column">
-                <p>Welcome to our page! I hope </p>
+                <p>Welcome to our page! </p>
                 <p>Please visit us <a class="red" href="#">here</a> for more recipes</p>  
                 <p class="red">Sousmate is a kitchen aid, helping users to 
                     <br>cook their favorite recipes.</p>  
